fix the "chat" button on the RFB Store overlapping to the popup

--- a/style.css
+++ b/style.css
@@ -738,7 +738,7 @@ hr {
   width: 100%;
   min-height: 100vh;
   background-color: #00000052;
-  z-index: 3;
+  z-index: 2147483646;
   align-items: flex-end;
   justify-content: center;
 }
